tests/fixtures/invalid/reversed_int.py
# Cannot call reversed() with Int
x = reversed(1)
